# mid-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
Docs/Guide/: git-github-collaboration-guide.md
Docs/Meeting Notes/: mn_2026_02_25.md  mn_2026_02_26.md
src/backend/: main.py
src/backend/agents/: graph.py  states.py
src/backend/api/: youtube_router.py
src/backend/data/subtitles/: 3R6vFdb7YI4.json  E3XmVD8oUuE.json  NzYRHiDR-vk.json  UyXtJoIAlGQ.json  XQaffRBwbTs.json  ajWG3lgl5jA.json  e0hEA69d4Dw.json  hTF-z5PZ-OI.json  jrHwm-gNg5Y.json  jvvnVa1pqC8.json  skzOMfk_ftU.json  x1VFfTz30VE.json  yytWGELNeOI.json
src/backend/prompts/: lecture_note_promp.py  quiz_prompt.py  timeline_summaize_prompt.py
src/backend/service/: keyword_validator.py  media_utils.py  youtube_scraper.py
src/backend/shared/: youtube_schema.py
src/backend/vector/: vector_db.py
src/backend/vector/data/chroma/: chroma.sqlite3
src/frontend/: app.py
src/frontend/components/: global_report.py  recommended_videos.py  search_bar.py  sidebar.py  video_player.py  video_tabs.py
src/frontend/utils/: markdown.py  state_manager.py
